--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.VPNSDK"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivityPro"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.VPNSDK">
