--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.VPNSDK"
         tools:targetApi="34">
         <activity
-            android:name=".MainActivity"
+            android:name=".MainActivityPro"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.VPNSDK">
