--- a/wgtunlib/src/main/AndroidManifest.xml
+++ b/wgtunlib/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.VPNSDK">
+        android:supportsRtl="true">
         <service
             android:name="com.wireguard.android.backend.GoBackend$VpnService"
             android:exported="false"
