--- a/wgtunlib/src/main/AndroidManifest.xml
+++ b/wgtunlib/src/main/AndroidManifest.xml
@@ -13,13 +13,12 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:extractNativeLibs="true">
         <service
             android:name="com.wireguard.android.backend.GoBackend$VpnService"
             android:exported="false"
+            android:foregroundServiceType="specialUse"
             android:permission="android.permission.BIND_VPN_SERVICE">
             <intent-filter>
                 <action android:name="android.net.VpnService" />
