--- a/wgtunlib/src/main/AndroidManifest.xml
+++ b/wgtunlib/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:label="@string/app_name"
         android:extractNativeLibs="true">
         <service
-            android:name="com.wireguard.android.backend.GoBackend$VpnService"
+            android:name="com.wireguard.android.backend.GoBackend$CustomVpnService"
             android:exported="false"
             android:foregroundServiceType="specialUse"
             android:permission="android.permission.BIND_VPN_SERVICE">
