--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ android.useAndroidX=true
 kotlin.code.style=official
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.aidl=true
+org.gradle.java.home=/Applications/Android Studio.app/Contents/jbr/Contents/Home/
