--- a/openvpnlib/build.gradle
+++ b/openvpnlib/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
 
 android {
@@ -33,7 +34,30 @@ android {
     }
 }
 
+publishing {
+    publications {
+        bar(MavenPublication) {
+            groupId = 'com.pheonixLib.openvpn'
+            artifactId = "openvpn"
+            version = "0.0.1"
+            artifact("$buildDir/outputs/aar/openvpnlib-release.aar")
+        }
+    }
+
+    repositories {
+        maven {
+            url uri("http://188.34.191.126:8080/private")
+            allowInsecureProtocol true
+            credentials {
+                username = "name"
+                password = "YG2InE1sWt47Omf1wFVXJzdjF9JxUKavv3JnUCU3anj87jHXb/AL0eQVeVahF19d"
+            }
+        }
+    }
+}
+
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.guava:guava:30.1-jre'
 }
