--- a/singbox/src/main/AndroidManifest.xml
+++ b/singbox/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="io.nekohasekai.sfa">
+    package="com.faddy.singbox">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -30,7 +30,7 @@
         tools:targetApi="34">
 
         <service
-            android:name="io.nekohasekai.sfa.VPNService"
+            android:name="io.nekohasekai.sfa.bg.VPNService"
             android:exported="false"
             android:foregroundServiceType="specialUse"
             android:permission="android.permission.BIND_VPN_SERVICE">
