--- a/openvpnlib/build.gradle
+++ b/openvpnlib/build.gradle
@@ -1,6 +1,11 @@
 plugins {
     id 'com.android.library'
     id 'maven-publish'
+    alias(libs.plugins.kotlin.android)
+    id("kotlin-parcelize")
+    alias(libs.plugins.hilt.android)
+    id("org.jetbrains.kotlin.plugin.serialization")
+    alias(libs.plugins.ksp)
 }
 
 android {
@@ -8,7 +13,7 @@ android {
     compileSdk 34
 
     defaultConfig {
-        minSdk 21
+        minSdk 24
         targetSdk 34
     }
 
@@ -57,7 +62,17 @@ publishing {
 }
 
 dependencies {
+    implementation(project(":commonCore"))
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.guava:guava:30.1-jre'
+    // hilt
+    implementation(libs.hilt.android)
+    ksp(libs.hilt.android.compiler)
+
+    // lifecycle
+    implementation(libs.lifecycle.runtime.compose)
+    implementation(libs.androidx.lifecycle.runtime.ktx)
+    implementation(libs.androidx.lifecycle.process)
+    implementation(libs.androidx.lifecycle.service)
 }
