--- a/openvpnlib/src/main/AndroidManifest.xml
+++ b/openvpnlib/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
                 <action android:name="android.net.VpnService" />
             </intent-filter>
         </service>
+
+        <receiver android:name=".OVpnBR" android:exported="false">
+            <intent-filter>
+                <action android:name="APP_SPECIFIC_BROADCAST" />
+            </intent-filter>
+        </receiver>
     </application>
 
 
