--- a/singbox/src/main/AndroidManifest.xml
+++ b/singbox/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
         tools:ignore="QueryAllPackagesPermission" />
 
     <application
-        android:allowBackup="true"
+        android:allowBackup="false"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:extractNativeLibs="true"
         android:fullBackupContent="@xml/backup_rules"
