--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.VPNSDK"
 >
         <activity
-            android:name=".MainActivityPro"
+            android:name=".ui.MainActivityPro"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.VPNSDK">
