--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,6 +9,7 @@ lifecycle-runtime-compose = "2.7.0"
 androidGradlePlugin = "8.4.0"
 kotlin = "1.9.22"
 ksp = "1.9.22-1.0.16"
+datastorePreferences = "1.1.1"
 material = "1.11.0"
 org-jetbrains-kotlin-jvm = "1.9.22"
 multidex = "2.0.1"
@@ -18,6 +19,8 @@ workRuntimeKtx = "2.9.0"
 junit = "4.13.2"
 junitVersion = "1.1.5"
 espressoCore = "3.5.1"
+navigationFragmentKtx = "2.8.1"
+navigationUiKtx = "2.8.1"
 
 
 [libraries]
@@ -29,6 +32,9 @@ androidx-preference-ktx = { module = "androidx.preference:preference-ktx", versi
 androidx-preference = { module = "androidx.preference:preference", version.ref = "preference" }
 androidx-legacy-support-v4 = { module = "androidx.legacy:legacy-support-v4", version.ref = "legacySupportV4" }
 androidx-multidex = { module = "androidx.multidex:multidex", version.ref = "multidex" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
+androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 
 desugar_jdk_libs = { module = "com.android.tools:desugar_jdk_libs", version.ref = "desugar_jdk_libs" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
